gcc/testsuite/rust/rustc/ui/resolve/name-clash-nullary.rs
fn main() {
  let None: isize = 42; // { dg-error ".E0308." "" { target *-*-* } }
}

